fixing stack trace and move concat

--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index",
+    "dev": "nodemon",
+    "build": "tsc -p ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.2.5",
     "nodemon": "^2.0.22",
+    "prettier": "2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
